[tests] Update test list

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -227,6 +227,7 @@ var testList = [
     {group: "script/stepping", uri: "script/stepping/4880/issue4880.js",   desc: "Step into function with frames, does not work", testPage: "script/stepping/4880/issue4880.html"},
     {group: "script/watch",    uri: "script/watch/5009/issue5009.js",  desc: "Watch side panel shows \"Command line closed?\"", testPage: "script/watch/5009/issue5009.html"},
     {group: "script/watch",    uri: "script/watch/5019/issue5019.js",  desc: "Editing a variable in the Watch window doesn't work", testPage: "script/watch/5019/issue5019.html"},
+    {group: "script/watch",    uri: "script/watch/5336/issue5336.js",  desc: "HTMLCollection object is undefined in the Script panel", testPage: "script/watch/5336/issue5336.html"},
     {group: "dom",     uri: "dom/attributes/attributes.js",            desc: "Better DOM representation for element attributes", testPage: "dom/attributes/attributes.html" },
     {group: "dom",     uri: "dom/breakpoints/breakOnProperty.js",      desc: "Break on property change", testPage: "dom/breakpoints/breakOnProperty.html" },
     {group: "dom",     uri: "dom/breakpoints/breakOnGlobalProperty.js",desc: "Break on global property change", testPage: "dom/breakpoints/breakOnGlobalProperty.html" },
