FBTest for issue 2967 (CSS on in SVG placed in a mixed XHTML+SVG document does not show up on CSS tab) http://code.google.com/p/fbug/issues/detail?id=2967

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -175,6 +175,7 @@ var testList = [
     {group: "css",     uri: "css/1189/issue1189.js",                   desc: "Display errors of inherited CSS styles in combination with CSS shorthand properties", testPage: "css/1189/issue1189.html"},
     {group: "css",     uri: "css/1338/issue1338.js",                   desc: "Increment CSS values at least significant digit", testPage: "css/1338/issue1338.html"},
     {group: "css",     uri: "css/2440/issue2440.js",                   desc: "Duplicate stylesheet refs", testPage: "css/2440/issue2440.html"},
+    {group: "css",     uri: "css/2967/issue2967.js",                   desc: "CSS on in SVG placed in a mixed XHTML+SVG document does not show up on CSS tab", testPage: "css/2967/issue2967.xml"},
     {group: "css",     uri: "css/2976/issue2976.js",                   desc: "Copy Style Declaration context menu option", testPage: "css/2976/issue2976.html"},
     {group: "css",     uri: "css/2978/issue2978.js",                   desc: "Enhancement: Copy CSS path from selected element", testPage: "css/2978/issue2978.html"},
     {group: "css",     uri: "css/3207/issue3207.js",                   desc: "CSS properties in the \"Computed\" tab are not updated correctly", testPage: "css/3207/issue3207.html"},
