--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -179,6 +179,7 @@ var testList = [
     {group: "css",     uri: "css/2976/issue2976.js",                   desc: "Copy Style Declaration context menu option", testPage: "css/2976/issue2976.html"},
     {group: "css",     uri: "css/2978/issue2978.js",                   desc: "Enhancement: Copy CSS path from selected element", testPage: "css/2978/issue2978.html"},
     {group: "css",     uri: "css/3207/issue3207.js",                   desc: "CSS properties in the \"Computed\" tab are not updated correctly", testPage: "css/3207/issue3207.html"},
+    {group: "css",     uri: "css/3303/issue3303.js",                   desc: "Up/Down key working incorrectly for fonts when editing CSS", testPage: "css/3303/issue3303.html"},
     {group: "css",     uri: "css/3652/issue3652.js",                   desc: "CSS autocomplete is broken", testPage: "css/3652/issue3652.html"},
     {group: "css",     uri: "css/3671/issue3671.js",                   desc: "CSS autocomplete globals", testPage: "css/3671/issue3671.html"},
     {group: "css",     uri: "css/3673/issue3673.js",                   desc: "warnings from FirebugReps.Warning should have coresponding actions", testPage: "css/3673/issue3673.html"},
