--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -61,6 +61,7 @@ var testList = [
     {group: "firebug",            uri: "firebug/2613/issue2613.js",               desc: "HTML, CSS, and DOM panels do not display on reload.", testPage: "firebug/2613/issue2613.html" },
     {group: "firebug",            uri: "firebug/4040/issue4040.js",               desc: "Switching to a about:blank page does not update the panels", testPage: "firebug/4040/issue4040.html" },
     {group: "firebug",            uri: "firebug/4553/issue4553.js",               desc: "iframe should be content-primary", testPage: "firebug/4553/issue4553.html" },
+    {group: "firebug",            uri: "firebug/5349/issue5349.js",               desc: "Context menu in select, radio, check, not work", testPage: "firebug/5349/issue5349.html" },
     {group: "firebug/options",    uri: "firebug/options/textSize.js",             desc: "Changing Firebug text size.", testPage: "firebug/options/textSize.html" },
     {group: "search",             uri: "search/netPanelSearch.js",                desc: "Search within the Net panel", testPage: "search/netVictim.htm" },
     {group: "search",             uri: "search/scriptPanelSearch.js",             desc: "Search within the Script panel" },
