--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -168,6 +168,7 @@ var testList = [
     {group: "html",               uri: "html/onMutate.js",                        desc: "Html Mutation test", testPage: "html/onMutate.html"},
     {group: "html",               uri: "html/2183/issue2183.js",                  desc: "Editing a text node with \"Show Full Text\" off displays cropped text instead of full text", testPage: "html/2183/issue2183.html"},
     {group: "html",               uri: "html/2426/issue2426.js",                  desc: "Copy XPath should include namespace", testPage: "html/2426/issue2426.html"},
+    {group: "html",               uri: "html/3296/issue3296.js",                  desc: "Form's action doesn't change and it isn't shown in HTML panel", testPage: "html/3296/issue3296.html"},
     {group: "html",               uri: "html/4542/issue4542.js",                  desc: "Quotes Issue With JavaScript Function Calls Inside Inline Event Handlers", testPage: "html/4542/issue4542.html"},
     {group: "html",               uri: "html/4669/issue4669.js",                  desc: "HTML tree doesn't expand completely for XML files", testPage: "html/4669/issue4669.xml"},
     {group: "html",               uri: "html/4826/issue4826.js",                  desc: "Changing the ID of a node in HTML Panel doesn't update Element Path", testPage: "html/4826/issue4826.html"},
