FBTest for issue 4805 (Distinguish or Highlight HTTPS protocol requests in Net panel) http://code.google.com/p/fbug/issues/detail?id=4805

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -277,6 +277,7 @@ var testList = [
     {group: "net",                uri: "net/4382/issue4382.js",                   desc: "JSON sorting", testPage: "net/4382/issue4382.html" },
     {group: "net",                uri: "net/4439/issue4439.js",                   desc: "Net Tab GET and POST responses empty when response's Content-Type is text/json", testPage: "net/4439/issue4439.html" },
     {group: "net",                uri: "net/4689/issue4689.js",                   desc: "Add option to copy parts of JSON data", testPage: "net/4689/issue4689.html" },
+    {group: "net",                uri: "net/4805/issue4805.js",                   desc: "Distinguish or Highlight HTTPS protocol requests in Net panel", testPage: "net/4805/issue4805.html" },
     {group: "net",                uri: "net/4905/issue4905.js",                   desc: "Show the \"Connection\" header in the network/headers part", testPage: "net/4905/issue4905.html" },
     {group: "net",                uri: "net/5004/issue5004.js",                   desc: "Only raw http post request parameters view", testPage: "net/5004/issue5004.html" },
     {group: "net",                uri: "net/5007/issue5007.js",                   desc: "Headers from POST request body are not displayed anymore", testPage: "net/5007/issue5007.html" }
