FBTest for issue 4724 ("Disable Breakpoint" is not checked on disabled breakpoints) http://code.google.com/p/fbug/issues/detail?id=4724

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -215,6 +215,7 @@ var testList = [
     {group: "script",             uri: "script/3918/AsyncJSD.js",                 desc: "Async JSD for FF4.0", testPage: "script/3918/AsyncJSDPage.html"},
     {group: "script",             uri: "script/3985/issue3985.js",                desc: "Can't break on code inserted twice using iframes, in one iframe", testPage: "script/3985/issue3985.html"},
     {group: "script",             uri: "script/4213/issue4213.js",                desc: "Script panel's location button is not updated", testPage: "script/4213/issue4213.html"},
+    {group: "script",             uri: "script/4724/issue4724.js",                desc: "&quot;Disable Breakpoint&quot; is not checked on disabled breakpoints", testPage: "script/4724/issue4724.html"},
     {group: "script",             uri: "script/4816/issue4816.js",                desc: "Script panel claims No JavaScript when it means you're stopped on a breakpoint on some other tab", testPage: "script/4816/issue4816.html"},
     {group: "script",             uri: "script/4818/issue4818.js",                desc: "frame.eval fails for everthing but the newest frame of the stack", testPage: "script/4818/issue4818.html"},
     {group: "script",             uri: "script/4932/issue4932.js",                desc: "The Script panel shows No Javascript on this page even if they are scripts within an iframe", testPage: "script/4932/issue4932.html"},
