FBTest for issue 3042 (Show syntax error position like in error console of Firefox) http://code.google.com/p/fbug/issues/detail?id=3042

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -100,6 +100,7 @@ var testList = [
     {group: "console",            uri: "console/2914/issue2914.js",               desc: "parent.window.console.error() called from an IFRAME fails to log anything.", testPage: "console/2914/issue2914.html" },
     {group: "console",            uri: "console/2948/issue2948.js",               desc: "Issue 3391: Console stops working (No XHR or log outputs)", testPage: "console/2948/issue2948.html"},
     {group: "console",            uri: "console/3029/issue3029.js",               desc: "Issue 3029: long property value of object change to 'undefined'", testPage: "console/3029/issue3029.html"},
+    {group: "console",            uri: "console/3042/issue3042.js",               desc: "Issue 3042: Show syntax error position like in error console of Firefox", testPage: "console/3042/issue3042.html"},
     {group: "console",            uri: "console/3078/issue3078.js",               desc: "Issue 3078: Console does scroll to the bottom for log entries in the head section", testPage: "console/3078/issue3078.html"},
     {group: "console",            uri: "console/3204/issue3204.js",               desc: "Issue 3204: console.* formatted strings print %* placeholder when surrounded by newlines", testPage: "console/3204/issue3204.html"},
     {group: "console",            uri: "console/3292/issue3292.js",               desc: "Issue 3292: Console not defined in iframe", testPage: "console/3292/issue3292.html"},
