FBTest for issue 5247 (Add reps for different types of CSSRules) http://code.google.com/p/fbug/issues/detail?id=5247

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -246,6 +246,7 @@ var testList = [
     {group: "dom",                uri: "dom/3122/issue3122.js",                   desc: "Issue 3122: Catch variables are not listed in the watch panel on break ('err' expr in the watch panel).", testPage: "dom/3122/issue3122.html" },
     {group: "dom",                uri: "dom/3597/issue3597.js",                   desc: "Issue 3597: Objects turned into string have their DOM panel representation messed up", testPage: "dom/3597/issue3597.html" },
     {group: "dom",                uri: "dom/4386/issue4386.js",                   desc: "DOM breakpoints can't be deleted or disabled/enabled from within the Breakpoints Side Panel", testPage: "dom/4386/issue4386.html" },
+    {group: "dom",                uri: "dom/5247/issue5247.js",                   desc: "Add reps for different types of CSSRules", testPage: "dom/5247/issue5247.html" },
     {group: "net",                uri: "net/activation/activation.js",            desc: "Verify Net panel content after activation on more tabs (Firebug opened within Firefox)." },
     {group: "net",                uri: "net/breakpoints/breakOnXHR.js",           desc: "XHR Conditional Breakpoints", testPage: "net/breakpoints/breakOnXHR.html" },
     {group: "net",                uri: "net/breakpoints/breakOnXHRCB.js",         desc: "XHR Conditional Breakpoints (Chromebug active)", testPage: "net/breakpoints/breakOnXHR.html" },
