--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -163,6 +163,7 @@ var testList = [
     {group: "commandLine",        uri: "commandLine/4434/issue4434.js",           desc: "Issue 4434: autocomplete in console debugger does not recognize variables in catch block", testPage: "commandLine/4434/issue4434.html"},
     {group: "commandLine",        uri: "commandLine/4453/issue4453.js",           desc: "Issue 4453: Content of the command line can't be cleared.", testPage: "commandLine/4453/issue4453.html"},
     {group: "commandLine",        uri: "commandLine/5042/issue5042.js",           desc: "Issue 5042: Command Line should not prevent tabbing out when empty", testPage: "commandLine/5042/issue5042.html"},
+    {group: "commandLine",        uri: "commandLine/5130/issue5130.js",           desc: "Array indices are sorted alphabetically instead of numerically", testPage: "commandLine/5130/issue5130.html"},
     {group: "html",               uri: "html/breakpoints/breakOnElement.js",      desc: "Mutation breakpoints test", testPage: "html/breakpoints/breakOnElement.html"},
     {group: "html",               uri: "html/breakpoints/breakOnElementCB.js",    desc: "Mutation breakpoints test (Chromebug active)", testPage: "html/breakpoints/breakOnElement.html"},
     {group: "html",               uri: "html/breakpoints/breakOnNext.js",         desc: "Mutation breakpoints test", testPage: "html/breakpoints/breakOnNext.html"},
