[tests] FBTest for Issue 5412: Auto-completion for CSS selectors

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -198,6 +198,7 @@ var testList = [
     {group: "css",                uri: "css/5177/issue5177.js",                   desc: "Allow colors to be changed using Up/Down keys", testPage: "css/5177/issue5177.html"},
     {group: "css",                uri: "css/5262/issue5262.js",                   desc: "Show @charset rules inside CSS panel", testPage: "css/5262/issue5262.html"},
     {group: "css",                uri: "css/5277/issue5277.js",                   desc: "Display @import rule media queries and allow editing them", testPage: "css/5277/issue5277.html"},
+    {group: "css",                uri: "css/5412/issue5412.js",                   desc: "Auto-completion for CSS selectors", testPage: "css/5412/issue5412.html"},
     {group: "script",             uri: "script/debuggerKeyword/testDriver1.6.js", desc: "Break on debugger keyword in various contexts.", testPage: "script/debuggerKeyword/testPage.html"},
     {group: "script",             uri: "script/dynamicScriptEval/test1.js",       desc: "Dynamic script evaluation", testPage: "script/dynamicScriptEval/test1.html"},
     {group: "script",             uri: "script/refreshHaltedDebugger.js",         desc: "Refreshing page when FB is halted breaks debugger.", testPage: "script/refreshHaltedDebugger.html" },
