Properly set doc encoding to avoid warning

--- a/trace/FBTrace/chrome/content/traceLogFrame.html
+++ b/trace/FBTrace/chrome/content/traceLogFrame.html
@@ -3,6 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="chrome://fbtrace-firebug/skin/panelbase.css" type="text/css"/>
     <link rel="stylesheet" href="chrome://fbtrace-firebug/skin/dom.css" type="text/css"/>
     <link rel="stylesheet" href="chrome://fbtrace-firebug/skin/console.css" type="text/css"/>
