--- a/tests/content/script/breakInAnotherTab/breakInAnotherTab.html
+++ b/tests/content/script/breakInAnotherTab/breakInAnotherTab.html
@@ -3,7 +3,7 @@
     <head>
         <title>Issue 4528: Break in non-selected tab leaves Firebug broken</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-        <link href="../../../../templates/default/testcase.css" type="text/css" rel="stylesheet"/>
+        <link href="../../_common/testcase.css" type="text/css" rel="stylesheet"/>
         <style type="text/css">
             section#output {
                 display: none;
