--- a/tests/content/script/stepping/StepIntoInIFrame/test.html
+++ b/tests/content/script/stepping/StepIntoInIFrame/test.html
@@ -3,7 +3,7 @@
 <head>
     <title>Step into function with frames, does not work</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="../../../../../templates/default/testcase.css"
+    <link href="../../../_common/testcase.css"
         type="text/css" rel="stylesheet"/>
 </head>
 <body>
