--- a/tests/content/console/testErrors.html
+++ b/tests/content/console/testErrors.html
@@ -3,7 +3,7 @@
     <head>
         <title>Console error reporting</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-        <link href="../../../templates/default/testcase.css" type="text/css" rel="stylesheet"/>
+        <link href="../_common/testcase.css" type="text/css" rel="stylesheet"/>
         <script type="application/x-javascript">
         function deepError()
         {
