--- a/tests/content/domplate/issue4425.html
+++ b/tests/content/domplate/issue4425.html
@@ -3,7 +3,7 @@
 <head>
     <title>Issue 4425: Better support for Domplate templates inheritance</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="../../../templates/default/testcase.css"
+    <link href="../_common/testcase.css"
         type="text/css" rel="stylesheet"/>
 </head>
 <body>
