--- a/tests/content/search/958/issue958.html
+++ b/tests/content/search/958/issue958.html
@@ -3,7 +3,7 @@
     <head>
         <title>Issue 958: Search Field shouldn't be cleared when switching between panels</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-        <link href="../../../../templates/default/testcase.css" type="text/css" rel="stylesheet"/>
+        <link href="../../_common/testcase.css" type="text/css" rel="stylesheet"/>
     </head>
     <body>
         <header>
