FBTest for issue 5461 (When copying selected parts from Style side panel don't copy source link or inherited styles header) http://code.google.com/p/fbug/issues/detail?id=5461

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -199,6 +199,7 @@ var testList = [
     {group: "css",                uri: "css/5277/issue5277.js",                   desc: "Display @import rule media queries and allow editing them", testPage: "css/5277/issue5277.html"},
     {group: "css",                uri: "css/5412/issue5412.js",                   desc: "Auto-completion for CSS selectors", testPage: "css/5412/issue5412.html"},
     {group: "css",                uri: "css/5430/issue5430.js",                   desc: "Show @namespace rules inside CSS panel", testPage: "css/5430/issue5430.html"},
+    {group: "css",                uri: "css/5461/issue5461.js",                   desc: "When copying selected parts from Style side panel don't copy source link or inherited styles header", testPage: "css/5461/issue5461.html"},
     {group: "css/computed",       uri: "css/computed/3207/issue3207.js",          desc: "CSS properties in the \"Computed\" tab are not updated correctly", testPage: "css/computed/3207/issue3207.html"},
     {group: "css/computed",       uri: "css/computed/5449/issue5449.js",          desc: "Show infotips in Computed side panel", testPage: "css/computed/5449/issue5449.html"},
     {group: "css/computed",       uri: "css/computed/5451/issue5451.js",          desc: "Persist scrolling in Computed side panel", testPage: "css/computed/5451/issue5451.html"},
