--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -200,6 +200,7 @@ var testList = [
     {group: "css",                uri: "css/5412/issue5412.js",                   desc: "Auto-completion for CSS selectors", testPage: "css/5412/issue5412.html"},
     {group: "css",                uri: "css/5430/issue5430.js",                   desc: "Show @namespace rules inside CSS panel", testPage: "css/5430/issue5430.html"},
     {group: "css",                uri: "css/5461/issue5461.js",                   desc: "When copying selected parts from Style side panel don't copy source link or inherited styles header", testPage: "css/5461/issue5461.html"},
+    {group: "css",                uri: "css/5469/issue5469.js",                   desc: "Add units when changing the length '0' with up/down keys", testPage: "css/5469/issue5469.html"},
     {group: "css/computed",       uri: "css/computed/3207/issue3207.js",          desc: "CSS properties in the \"Computed\" tab are not updated correctly", testPage: "css/computed/3207/issue3207.html"},
     {group: "css/computed",       uri: "css/computed/5449/issue5449.js",          desc: "Show infotips in Computed side panel", testPage: "css/computed/5449/issue5449.html"},
     {group: "css/computed",       uri: "css/computed/5451/issue5451.js",          desc: "Persist scrolling in Computed side panel", testPage: "css/computed/5451/issue5451.html"},
