FBTest for issue 3660 (Implement pageUp/pageDown and mouseWheel for completion list)
http://code.google.com/p/fbug/issues/detail?id=3660

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -137,6 +137,7 @@ var testList = [
     {group: "console/completion", uri: "console/completion/3394/issue3394.js",    desc: "Issue 3394: TAB Key does not finish an autocomplete keyword in Gnome (Ubuntu)", testPage: "console/completion/3394/issue3394.html" },
     {group: "console/completion", uri: "console/completion/3421/issue3421.js",    desc: "Issue 3421: Autocompletion expression parsing is wrong", testPage: "console/completion/3421/issue3421.html" },
     {group: "console/completion", uri: "console/completion/3466/issue3466.js",    desc: "Issue 3466: Can not use dir() command in console's command line", testPage: "console/completion/3466/issue3466.html" },
+    {group: "console/completion", uri: "console/completion/3660/issue3660.js",    desc: "Issue 3660: Implement pageUp/pageDown and mouseWheel for completion list", testPage: "console/completion/3660/issue3660.html" },
     {group: "console/completion", uri: "console/completion/4233/issue4233.js",    desc: "Issue 4233: [Large patch] Better auto-completion", testPage: "console/completion/4233/issue4233.html"},
     {group: "console/completion", uri: "console/completion/5006/issue5006.js",    desc: "Issue 5006: Switching panels does not correctly set the command line auto-completer", testPage: "console/completion/5006/issue5006.html"},
     {group: "commandLine",        uri: "commandLine/api.js",                      desc: "Verify command line APIs.", testPage: "commandLine/api.html" },
