--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -177,6 +177,7 @@ var testList = [
     {group: "html",               uri: "html/5058/issue5058.js",                  desc: "Edit HTML button doesn't work", testPage: "html/5058/issue5058.html"},
     {group: "html",               uri: "html/5255/issue5255.js",                  desc: "Adding elements through Edit HTML shows them in the wrong place", testPage: "html/5255/issue5255.html"},
     {group: "html",               uri: "html/5448/issue5448.js",                  desc: "normalize() breaks display of text nodes with entities", testPage: "html/5448/issue5448.html"},
+    {group: "html",               uri: "html/5504/issue5504.js",                  desc: "New attributes default to undefined='undefined'", testPage: "html/5504/issue5504.html"},
     {group: "css",                uri: "css/537/issue537.js",                     desc: "Pseudo-elements are not displayed in Style side panel", testPage: "css/537/issue537.html"},
     {group: "css",                uri: "css/1189/issue1189.js",                   desc: "Display errors of inherited CSS styles in combination with CSS shorthand properties", testPage: "css/1189/issue1189.html"},
     {group: "css",                uri: "css/1338/issue1338.js",                   desc: "Increment CSS values at least significant digit", testPage: "css/1338/issue1338.html"},
