FBTest for issue 5493 (Case-insensitive auto-completion)
http://code.google.com/p/fbug/issues/detail?id=5493

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -140,6 +140,7 @@ var testList = [
     {group: "console/completion", uri: "console/completion/3660/issue3660.js",    desc: "Issue 3660: Implement pageUp/pageDown and mouseWheel for completion list", testPage: "console/completion/3660/issue3660.html" },
     {group: "console/completion", uri: "console/completion/4233/issue4233.js",    desc: "Issue 4233: [Large patch] Better auto-completion", testPage: "console/completion/4233/issue4233.html"},
     {group: "console/completion", uri: "console/completion/5006/issue5006.js",    desc: "Issue 5006: Switching panels does not correctly set the command line auto-completer", testPage: "console/completion/5006/issue5006.html"},
+    {group: "console/completion", uri: "console/completion/5493/issue5493.js",    desc: "Issue 5493: Case-insensitive auto-completion", testPage: "console/completion/5493/issue5493.html"},
     {group: "commandLine",        uri: "commandLine/api.js",                      desc: "Verify command line APIs.", testPage: "commandLine/api.html" },
     {group: "commandLine",        uri: "commandLine/cd.js",                       desc: "Verify command line cd() method.", testPage: "commandLine/cd.html" },
     {group: "commandLine",        uri: "commandLine/debug.js",                    desc: "Verify command line debug API.", testPage: "commandLine/debug.html" },
