--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -233,6 +233,7 @@ var testList = [
     {group: "script",             uri: "script/4818/issue4818.js",                desc: "frame.eval fails for everthing but the newest frame of the stack", testPage: "script/4818/issue4818.html"},
     {group: "script",             uri: "script/4932/issue4932.js",                desc: "The Script panel shows No Javascript on this page even if they are scripts within an iframe", testPage: "script/4932/issue4932.html"},
     {group: "script/breakpoints", uri: "script/breakpoints/4854/issue4854.js",    desc: "Issue 4854: XHR breakpoints can't be removed from Breakpoints side panel", testPage: "script/breakpoints/4854/issue4854.html"},
+    {group: "script/breakpoints", uri: "script/breakpoints/5525/issue5525.js",    desc: "Setting error breakpoints causes error in Breakpoints side panel", testPage: "script/breakpoints/5525/issue5525.html"},
     {group: "script/callstack",   uri: "script/callstack/1811/issue1811.js",      desc: "Issue 1811: Add prettyName/displayName support to Profiler output and Stacks", testPage: "script/callstack/1811/issue1811.html"},
     {group: "script/callstack",   uri: "script/callstack/3596/issue3596.js",      desc: "Issue 3596: Stack trace forgets where it is", testPage: "script/callstack/3596/issue3596.html"},
     {group: "script/callstack",   uri: "script/callstack/3645/issue3645.js",      desc: "Issue 3645: _firebugRerun and friends need to be elided from the panel status path", testPage: "script/callstack/3645/issue3645.html"},
