Updated and fixed FBTests for Cookies panel

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -297,11 +297,10 @@ var testList = [
     {group: "net",                uri: "net/4905/issue4905.js",                   desc: "Show the \"Connection\" header in the network/headers part", testPage: "net/4905/issue4905.html" },
     {group: "net",                uri: "net/5004/issue5004.js",                   desc: "Only raw http post request parameters view", testPage: "net/5004/issue5004.html" },
     {group: "net",                uri: "net/5007/issue5007.js",                   desc: "Headers from POST request body are not displayed anymore", testPage: "net/5007/issue5007.html" },
-    {group: "cookies",            uri: "cookies/general/cookiePanel.js",          desc: "Existence of cookie panel", testPage: "cookies/general/cookiePanel.php" },
-    {group: "cookies",            uri: "cookies/general/cookieEntry.js",          desc: "Existence of cookie entry", testPage: "cookies/general/cookieEntry.php" },
-    {group: "cookies",            uri: "cookies/general/cookieValues.js",         desc: "Check displayed cookie values", testPage: "cookies/general/cookieValues.php" },
-    {group: "cookies",            uri: "cookies/general/cookieClipboard.js",      desc: "Clipboard (copy and paste)", testPage: "cookies/general/cookieClipboard.php" },
-    {group: "cookies",            uri: "cookies/general/cookieBreakOnNext.js",    desc: "Break on Cookie change", testPage: "cookies/general/breakOnNext.php" },
+    {group: "cookies",            uri: "cookies/general/cookiesPanel.js",         desc: "Existence of cookie panel", testPage: "cookies/general/cookiesPanel.html" },
+    {group: "cookies",            uri: "cookies/general/cookieInfo.js",           desc: "Existence of cookie info", testPage: "cookies/general/cookieInfo.php" },
+    {group: "cookies",            uri: "cookies/general/clipboard.js",            desc: "Clipboard functionality for the Cookies panel (copy and paste)", testPage: "cookies/general/clipboard.php" },
+    {group: "cookies",            uri: "cookies/general/breakOnNext.js",          desc: "Break on Cookie change", testPage: "cookies/general/breakOnNext.php" },
     {group: "cookies",            uri: "cookies/general/editCookies.js",          desc: "Edit Cookie", testPage: "cookies/general/editCookies.php" },
     {group: "cookies",            uri: "cookies/18/issue18.js",                   desc: "Unescape cookie values", testPage: "cookies/18/issue18.php" },
     {group: "cookies",            uri: "cookies/23/issue23.js",                   desc: "httpOnly cookies", testPage: "cookies/23/issue23.php" },
