Issue 5585: 	FBTest fails: html/onMutate.html (on Linux)

--- a/tests/FBTest/content/wrapAJSFile.html
+++ b/tests/FBTest/content/wrapAJSFile.html
@@ -5,6 +5,7 @@
 <script type="application/x-javascript" src="chrome://fbtest/content/FBTestMutation.js"></script>
 <script type="application/x-javascript" src="chrome://fbtest/content/FBTestSelection.js"></script>
 <script type="application/x-javascript" src="chrome://fbtest/content/FBTestCookies.js"></script>
+<script type="application/x-javascript" src="chrome://fbtest/content/jsdiff.js"></script>
 <script type="application/x-javascript">
 // XPCOM
 var Cc = Components.classes;
