--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -59,6 +59,7 @@ var testList = [
     {group: "firebug",            uri: "firebug/4040/issue4040.js",               desc: "Switching to a about:blank page does not update the panels", testPage: "firebug/4040/issue4040.html" },
     {group: "firebug",            uri: "firebug/4553/issue4553.js",               desc: "iframe should be content-primary", testPage: "firebug/4553/issue4553.html" },
     {group: "firebug",            uri: "firebug/5349/issue5349.js",               desc: "Context menu in select, radio, check, not work", testPage: "firebug/5349/issue5349.html" },
+    {group: "firebug",            uri: "firebug/5526/issue5526.js",               desc: "Open Firebug in detached mode when it was minimized in detached mode", testPage: "firebug/5526/issue5526.html" },
     {group: "firebug/options",    uri: "firebug/options/textSize.js",             desc: "Changing Firebug text size.", testPage: "firebug/options/textSize.html" },
     {group: "search",             uri: "search/netPanelSearch.js",                desc: "Search within the Net panel", testPage: "search/netVictim.htm" },
     {group: "search",             uri: "search/scriptPanelSearch.js",             desc: "Search within the Script panel" },
@@ -238,6 +239,7 @@ var testList = [
     {group: "script/callstack",   uri: "script/callstack/3596/issue3596.js",      desc: "Issue 3596: Stack trace forgets where it is", testPage: "script/callstack/3596/issue3596.html"},
     {group: "script/callstack",   uri: "script/callstack/3645/issue3645.js",      desc: "Issue 3645: _firebugRerun and friends need to be elided from the panel status path", testPage: "script/callstack/3645/issue3645.html"},
     {group: "script/callstack",   uri: "script/callstack/4415/issue4415.js",      desc: "Issue 4415: Callstack panel is broken", testPage: "script/callstack/4415/issue4415.html"},
+    {group: "script/callstack",   uri: "script/callstack/5400/issue5400.js",      desc: "Firebug shows wrong (previous) stacktrace", testPage: "script/callstack/5400/issue5400.html"},
     {group: "script/stepping",    uri: "script/stepping/StepIntoInIFrame/test-driver.js", desc: "Step into function within an iframe", testPage: "script/stepping/StepIntoInIFrame/test.html"},
     {group: "script/stepping",    uri: "script/stepping/1179/issue1179.js",       desc: "Actions do not move the program counter after Step Into if breakpoint is on first line of function", testPage: "script/stepping/1179/issue1179.html"},
     {group: "script/stepping",    uri: "script/stepping/1179/issue1179-2.js",     desc: "Actions do not move the program counter after Step Into if breakpoint is on first line of function", testPage: "script/stepping/1179/issue1179-2.html"},
