--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -240,6 +240,7 @@ var testList = [
     {group: "script/callstack",   uri: "script/callstack/3645/issue3645.js",      desc: "Issue 3645: _firebugRerun and friends need to be elided from the panel status path", testPage: "script/callstack/3645/issue3645.html"},
     {group: "script/callstack",   uri: "script/callstack/4415/issue4415.js",      desc: "Issue 4415: Callstack panel is broken", testPage: "script/callstack/4415/issue4415.html"},
     {group: "script/callstack",   uri: "script/callstack/5400/issue5400.js",      desc: "Firebug shows wrong (previous) stacktrace", testPage: "script/callstack/5400/issue5400.html"},
+    {group: "script/callstack",   uri: "script/callstack/5544/issue5544.js",      desc: "Issue 5544: Can't set error breakpoint for shallow error", testPage: "script/callstack/5544/issue5544.html"},
     {group: "script/stepping",    uri: "script/stepping/StepIntoInIFrame/test-driver.js", desc: "Step into function within an iframe", testPage: "script/stepping/StepIntoInIFrame/test.html"},
     {group: "script/stepping",    uri: "script/stepping/1179/issue1179.js",       desc: "Actions do not move the program counter after Step Into if breakpoint is on first line of function", testPage: "script/stepping/1179/issue1179.html"},
     {group: "script/stepping",    uri: "script/stepping/1179/issue1179-2.js",     desc: "Actions do not move the program counter after Step Into if breakpoint is on first line of function", testPage: "script/stepping/1179/issue1179-2.html"},
