--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
@@ -58,7 +58,8 @@ var testList = [
     {group: "firebug",            uri: "firebug/2613/issue2613.js",               desc: "HTML, CSS, and DOM panels do not display on reload.", testPage: "firebug/2613/issue2613.html" },
     {group: "firebug",            uri: "firebug/4040/issue4040.js",               desc: "Switching to a about:blank page does not update the panels", testPage: "firebug/4040/issue4040.html" },
     {group: "firebug",            uri: "firebug/4553/issue4553.js",               desc: "iframe should be content-primary", testPage: "firebug/4553/issue4553.html" },
-    {group: "firebug",            uri: "firebug/5349/issue5349.js",               desc: "Context menu in select, radio, check, not work", testPage: "firebug/5349/issue5349.html" },
+    { group: "firebug", uri: "firebug/5349/issue5349.js", desc: "Context menu in select, radio, check, not work", testPage: "firebug/5349/issue5349.html" },
+    { group: "firebug", uri: "firebug/4153/issue4153.js", desc: "Re-attaching detached, deactivated Firebug UI doesn't close it", testPage: "firebug/4153/issue4153.html" },
     {group: "firebug/options",    uri: "firebug/options/textSize.js",             desc: "Changing Firebug text size.", testPage: "firebug/options/textSize.html" },
     {group: "search",             uri: "search/netPanelSearch.js",                desc: "Search within the Net panel", testPage: "search/netVictim.htm" },
     {group: "search",             uri: "search/scriptPanelSearch.js",             desc: "Search within the Script panel" },
