FBTest for issue 5142

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -150,6 +150,7 @@ var testList = [
     {group: "commandLine",        uri: "commandLine/monitorEvents.js",            desc: "Verify command line monitorEvents API.", testPage: "commandLine/monitorEvents.html" },
     {group: "commandLine",        uri: "commandLine/objects.js",                  desc: "Page objects used on the command line", testPage: "commandLine/objects.html"},
     {group: "commandLine",        uri: "commandLine/profile.js",                  desc: "Verify command line profile & profileEnd API.", testPage: "commandLine/profile.html" },
+    {group: "commandLine",        uri: "commandLine/help.js",                     desc: "Verify command line help API", testPage: "commandLine/help.html"},
     {group: "commandLine",        uri: "commandLine/2934/issue2934.js",           desc: "1.6a7 console and auto-complete (needs 'window.' prefix)", testPage: "commandLine/2934/issue2934.html" },
     {group: "commandLine",        uri: "commandLine/3363/issue3363.js",           desc: "Issue 3363: groupCollapsed gets confused", testPage: "commandLine/3363/issue3363.html" },
     {group: "commandLine",        uri: "commandLine/3599/issue3599.js",           desc: "Issue 3599: The value of undefined no longer show in the console", testPage: "commandLine/3599/issue3599.html"},
