fix issue #5535 (execute selection in command editor)

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -78,6 +78,7 @@ var testList = [
     {group: "examples",           uri: "examples/exampleTest.js",                 desc: "Simple test example." },
     {group: "console",            uri: "console/breakOnError/breakOnError.js",    desc: "Test for breakOnError feature.", testPage: "console/breakOnError/breakOnError.html"},
     {group: "console",            uri: "console/consoleOnOtherPanels.js",         desc: "Console and command line on other panels.", testPage: "console/consoleOnOtherPanels.html"},
+    {group: "console",            uri: "console/executeSelection.js",             desc: "Execute selection in console.",              testPage: "console/executeSelection.html"},
     {group: "console",            uri: "console/onreadystatechange.js",           desc: "Log an onreadystatechange function." },
     {group: "console",            uri: "console/panelContentAfterDisable1.6.js",  desc: "If console panel is disabled command line must be hidden." },
     {group: "console",            uri: "console/panelContentAfterReopen.js",      desc: "Preserve Panel Content When Firebug UI Is Closed And Opened Again.", testPage: "console/panelContentAfterReopen.html"},
