--- a/tests/content/console/executeSelection.html
+++ b/tests/content/console/executeSelection.html
@@ -39,7 +39,7 @@
                         <code style="color: red"> no selection</code>
                     </li>
                     <li>Switch back to Command Line</li>
-                    <li>Select <code style="color: green">var b = a || "selection"; console.log(b);</code></li>
+                    <li>Select <code style="color: green">var b = window.a || "selection";  console.log(b);</code></li>
                     <li>Press <i>Enter</i></li>
                     <li>The Console panel should display : <br/>
                         <code style="color: red"> no selection</code>
