--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -121,6 +121,7 @@ var testList = [
     {group: "console/spy",        uri: "console/spy/2868/issue2868.js",           desc: "ajax response is not shown in the answer tab", testPage: "console/spy/2868/issue2868.html" },
     {group: "console/spy",        uri: "console/spy/4085/issue4085.js",           desc: "Errors inside an XmlHttpRequest.onReadyStateChange still fail silently", testPage: "console/spy/4085/issue4085.html" },
     {group: "console/spy",        uri: "console/spy/4738/issue4738.js",           desc: "Open in new tab opens wrong url when reusing XMLHttpRequest objects", testPage: "console/spy/4738/issue4738.html" },
+    {group: "console/spy",        uri: "console/spy/4171/issue4171.js",           desc: "Expanding an XMLHttpRequest in Console tab before it ends makes JSON tab disappear", testPage: "console/spy/4171/issue4171.html" },
     {group: "console/api",        uri: "console/api/assert.js",                   desc: "Test for console.assert API.", testPage: "console/api/assert.html" },
     {group: "console/api",        uri: "console/api/clear.js",                    desc: "Test for console.clear API.", testPage: "console/api/clear.html" },
     {group: "console/api",        uri: "console/api/count.js",                    desc: "Test for console.count API.", testPage: "console/api/count.html" },
