Replaced old email address by new one

--- a/tests/content/console/testErrors.html
+++ b/tests/content/console/testErrors.html
@@ -86,7 +86,7 @@
                     <li>Every button generates an error, which is displayed inside the <em>Console</em> panel</li>
                 </ul>
             </section>
-            <footer>Sebastian Zartner, sebastianzartner@gmx.de</footer>
+            <footer>Sebastian Zartner, sebastianzartner@gmail.com</footer>
         </div>
     </body>
 </html>
