commandLine/dom.js and commandLine/objects.js are not part of the Command Line API

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -147,14 +147,14 @@ var testList = [
     {group: "console/completion", uri: "console/completion/4233/issue4233.js",    desc: "Issue 4233: [Large patch] Better auto-completion", testPage: "console/completion/4233/issue4233.html"},
     {group: "console/completion", uri: "console/completion/5006/issue5006.js",    desc: "Issue 5006: Switching panels does not correctly set the command line auto-completer", testPage: "console/completion/5006/issue5006.html"},
     {group: "console/completion", uri: "console/completion/5493/issue5493.js",    desc: "Issue 5493: Case-insensitive auto-completion", testPage: "console/completion/5493/issue5493.html"},
-    {group: "commandLine/api",    uri: "commandLine/dom.js",                      desc: "Verify command line DOM access.", testPage: "commandLine/dom.html" },
-    {group: "commandLine/api",    uri: "commandLine/objects.js",                  desc: "Page objects used on the command line", testPage: "commandLine/objects.html"},
     {group: "commandLine/api",    uri: "commandLine/api/api.js",                  desc: "Verify command line APIs.", testPage: "commandLine/api/api.html" },
     {group: "commandLine/api",    uri: "commandLine/api/cd.js",                   desc: "Verify command line cd() method.", testPage: "commandLine/api/cd.html" },
     {group: "commandLine/api",    uri: "commandLine/api/debug.js",                desc: "Verify command line debug API.", testPage: "commandLine/api/debug.html" },
     {group: "commandLine/api",    uri: "commandLine/api/monitorEvents.js",        desc: "Verify command line monitorEvents API.", testPage: "commandLine/api/monitorEvents.html" },
     {group: "commandLine/api",    uri: "commandLine/api/profile.js",              desc: "Verify command line profile & profileEnd API.", testPage: "commandLine/api/profile.html" },
     {group: "commandLine/api",    uri: "commandLine/api/help.js",                 desc: "Verify command line help API", testPage: "commandLine/api/help.html"},
+    {group: "commandLine",        uri: "commandLine/dom.js",                      desc: "Verify command line DOM access.", testPage: "commandLine/dom.html" },
+    {group: "commandLine",        uri: "commandLine/objects.js",                  desc: "Page objects used on the command line", testPage: "commandLine/objects.html"},
     {group: "commandLine",        uri: "commandLine/2934/issue2934.js",           desc: "1.6a7 console and auto-complete (needs 'window.' prefix)", testPage: "commandLine/2934/issue2934.html" },
     {group: "commandLine",        uri: "commandLine/3363/issue3363.js",           desc: "Issue 3363: groupCollapsed gets confused", testPage: "commandLine/3363/issue3363.html" },
     {group: "commandLine",        uri: "commandLine/3599/issue3599.js",           desc: "Issue 3599: The value of undefined no longer show in the console", testPage: "commandLine/3599/issue3599.html"},
