--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -149,6 +149,7 @@ var testList = [
     {group: "console/completion", uri: "console/completion/5006/issue5006.js",    desc: "Issue 5006: Switching panels does not correctly set the command line auto-completer", testPage: "console/completion/5006/issue5006.html"},
     {group: "console/completion", uri: "console/completion/5493/issue5493.js",    desc: "Issue 5493: Case-insensitive auto-completion", testPage: "console/completion/5493/issue5493.html"},
     {group: "commandLine/api",    uri: "commandLine/api/api.js",                  desc: "Verify command line APIs.", testPage: "commandLine/api/api.html" },
+    {group: "commandLine/api",    uri: "commandLine/api/$x.js",                   desc: "Verify command line $x API.", testPage: "commandLine/api/$x.html" },
     {group: "commandLine/api",    uri: "commandLine/api/cd.js",                   desc: "Verify command line cd() method.", testPage: "commandLine/api/cd.html" },
     {group: "commandLine/api",    uri: "commandLine/api/debug.js",                desc: "Verify command line debug API.", testPage: "commandLine/api/debug.html" },
     {group: "commandLine/api",    uri: "commandLine/api/monitorEvents.js",        desc: "Verify command line monitorEvents API.", testPage: "commandLine/api/monitorEvents.html" },
