FBTest for issue 5324

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -311,6 +311,7 @@ var testList = [
     {group: "net",                uri: "net/5007/issue5007.js",                   desc: "Headers from POST request body are not displayed anymore", testPage: "net/5007/issue5007.html" },
     {group: "net",                uri: "net/5592/issue5592.js",                   desc: "Add option to copy request parameters", testPage: "net/5592/issue5592.html" },
     {group: "net",                uri: "net/5714/issue5714.js",                   desc: "Can't resend requests", testPage: "net/5714/issue5714.html" },
+    {group: "net",                uri: "net/5324/issue5324.js",                   desc: "SPDY support in the Net panel", testPage: "net/5324/issue5324.html" },
     {group: "cookies",            uri: "cookies/general/cookiesPanel.js",         desc: "Existence of cookie panel", testPage: "cookies/general/cookiesPanel.html" },
     {group: "cookies",            uri: "cookies/general/cookieInfo.js",           desc: "Existence of cookie info", testPage: "cookies/general/cookieInfo.php" },
     {group: "cookies",            uri: "cookies/general/clipboard.js",            desc: "Clipboard functionality for the Cookies panel (copy and paste)", testPage: "cookies/general/clipboard.php" },
