--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -183,6 +183,7 @@ var testList = [
     {group: "html",               uri: "html/4542/issue4542.js",                  desc: "Quotes Issue With JavaScript Function Calls Inside Inline Event Handlers", testPage: "html/4542/issue4542.html"},
     {group: "html",               uri: "html/4669/issue4669.js",                  desc: "HTML tree doesn't expand completely for XML files", testPage: "html/4669/issue4669.xml"},
     {group: "html",               uri: "html/4826/issue4826.js",                  desc: "Changing the ID of a node in HTML Panel doesn't update Element Path", testPage: "html/4826/issue4826.html"},
+    {group: "html",               uri: "html/4837/issue4837.js",                  desc: "Editing a node value doesn't update inside HTML panel", testPage: "html/4837/issue4837.html"},
     {group: "html",               uri: "html/5058/issue5058.js",                  desc: "Edit HTML button doesn't work", testPage: "html/5058/issue5058.html"},
     {group: "html",               uri: "html/5255/issue5255.js",                  desc: "Adding elements through Edit HTML shows them in the wrong place", testPage: "html/5255/issue5255.html"},
     {group: "html",               uri: "html/5448/issue5448.js",                  desc: "normalize() breaks display of text nodes with entities", testPage: "html/5448/issue5448.html"},
