--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -249,6 +249,7 @@ var testList = [
     {group: "script/callstack",   uri: "script/callstack/3596/issue3596.js",      desc: "Issue 3596: Stack trace forgets where it is", testPage: "script/callstack/3596/issue3596.html"},
     {group: "script/callstack",   uri: "script/callstack/3645/issue3645.js",      desc: "Issue 3645: _firebugRerun and friends need to be elided from the panel status path", testPage: "script/callstack/3645/issue3645.html"},
     {group: "script/callstack",   uri: "script/callstack/4415/issue4415.js",      desc: "Issue 4415: Callstack panel is broken", testPage: "script/callstack/4415/issue4415.html"},
+    {group: "script/callstack",   uri: "script/callstack/4845/issue4845.js",      desc: "Rerun should have a shortcut like the other debugging options", testPage: "script/callstack/4845/issue4845.html"},
     {group: "script/callstack",   uri: "script/callstack/5400/issue5400.js",      desc: "Firebug shows wrong (previous) stacktrace", testPage: "script/callstack/5400/issue5400.html"},
     {group: "script/callstack",   uri: "script/callstack/5544/issue5544.js",      desc: "Issue 5544: Can't set error breakpoint for shallow error", testPage: "script/callstack/5544/issue5544.html"},
     {group: "script/stepping",    uri: "script/stepping/StepIntoInIFrame/test-driver.js", desc: "Step into function within an iframe", testPage: "script/stepping/StepIntoInIFrame/test.html"},
