FBTest for issue 4670 (Nodes of XML files are always shown as hidden) http://code.google.com/p/fbug/issues/detail?id=4670

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -182,6 +182,7 @@ var testList = [
     {group: "html",               uri: "html/3296/issue3296.js",                  desc: "Form's action doesn't change and it isn't shown in HTML panel", testPage: "html/3296/issue3296.html"},
     {group: "html",               uri: "html/4542/issue4542.js",                  desc: "Quotes Issue With JavaScript Function Calls Inside Inline Event Handlers", testPage: "html/4542/issue4542.html"},
     {group: "html",               uri: "html/4669/issue4669.js",                  desc: "HTML tree doesn't expand completely for XML files", testPage: "html/4669/issue4669.xml"},
+    {group: "html",               uri: "html/4670/issue4670.js",                  desc: "Nodes of XML files are always shown as hidden", testPage: "html/4670/issue4670.xml"},
     {group: "html",               uri: "html/4826/issue4826.js",                  desc: "Changing the ID of a node in HTML Panel doesn't update Element Path", testPage: "html/4826/issue4826.html"},
     {group: "html",               uri: "html/4837/issue4837.js",                  desc: "Editing a node value doesn't update inside HTML panel", testPage: "html/4837/issue4837.html"},
     {group: "html",               uri: "html/5058/issue5058.js",                  desc: "Edit HTML button doesn't work", testPage: "html/5058/issue5058.html"},
