FBTest for issue 4602 (Transfer text selection to Search Field when it's focussed using the keyboard shortcut) http://code.google.com/p/fbug/issues/detail?id=4602

--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -66,6 +66,7 @@ var testList = [
     {group: "search",             uri: "search/scriptPanelSearch.js",             desc: "Search within the Script panel" },
     {group: "search",             uri: "search/958/issue958.js",                  desc: "Search Field shouldn't be cleared when switching between panels", testPage: "search/958/issue958.html" },
     {group: "search",             uri: "search/2886/issue2886.js",                desc: "JavaScript search field doesn't find some code", testPage: "search/2886/issue2886.html" },
+    {group: "search",             uri: "search/4602/issue4602.js",                desc: "Transfer text selection to Search Field when it's focussed using the keyboard shortcut", testPage: "search/4602/issue4602.html" },
     {group: "search",             uri: "search/4603/issue4603.js",                desc: "Add clear button to the Search Field", testPage: "search/4603/issue4603.html" },
     {group: "shortcuts",          uri: "shortcuts/firebug.js",                    desc: "Firebug shortcuts (F12, Shift+F12, Ctrl+F12)", testPage: "shortcuts/firebug.html" },
     {group: "shortcuts",          uri: "shortcuts/inspector.js",                  desc: "Inspector shortcut (Ctrl+Shift+C)", testPage: "shortcuts/inspector.html" },
