--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -46,7 +46,7 @@ var testList = [
     {group: "domplate",           uri: "domplate/issue4425.js",                   desc: "Inspector shortcut (Ctrl+Shift+C)" },
     {group: "firebug",            uri: "firebug/activeContextAfterReload.js",     desc: "Reloading a FF tab with Firebug open." },
     {group: "firebug",            uri: "firebug/allOpenAllClose1.5.js",           desc: "First test: all open and all close", testPage: "firebug/OpenFirebugOnThisPage.html" },
-    {group: "firebug",            uri: "firebug/changeUILocation.js",             desc: "Changing Firebug UI location", testPage: "firebug/OpenFirebugOnThisPage.html" },
+    /*{group: "firebug",            uri: "firebug/changeUILocation.js",             desc: "Changing Firebug UI location", testPage: "firebug/OpenFirebugOnThisPage.html" },*/
     {group: "firebug",            uri: "firebug/closeOpenOpenSwitchTabsTwice.js", desc: "Switch between two tabs, one Firebug, one not" },
     {group: "firebug",            uri: "firebug/openDisableEnableReload.js",      desc: "Firebug opened disabled on all panels then enabled on all panels" },
     {group: "firebug",            uri: "firebug/openInNewWindow.js",              desc: "Firebug opened in a new window", testPage: "script/1483/issue1483.html" },
