--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -222,6 +222,7 @@ var testList = [
     {group: "css",                uri: "css/5438/issue5438.js",                   desc: "Allow jumping from web font usage in Style side panel to its definition", testPage: "css/5438/issue5438.html"},
     {group: "css",                uri: "css/5461/issue5461.js",                   desc: "When copying selected parts from Style side panel don't copy source link or inherited styles header", testPage: "css/5461/issue5461.html"},
     {group: "css",                uri: "css/5469/issue5469.js",                   desc: "Add units when changing the length '0' with up/down keys", testPage: "css/5469/issue5469.html"},
+    {group: "css",                uri: "css/5644/issue5644.js",                   desc: "Editing a disabled property makes another", testPage: "css/5644/issue5644.html"},
     {group: "css/computed",       uri: "css/computed/3207/issue3207.js",          desc: "CSS properties in the \"Computed\" tab are not updated correctly", testPage: "css/computed/3207/issue3207.html"},
     {group: "css/computed",       uri: "css/computed/4132/issue4132.js",          desc: "Only show applied styles in Computed side panel", testPage: "css/computed/4132/issue4132.html"},
     {group: "css/computed",       uri: "css/computed/5449/issue5449.js",          desc: "Show infotips in Computed side panel", testPage: "css/computed/5449/issue5449.html"},
