--- a/tests/content/firebug.html
+++ b/tests/content/firebug.html
@@ -333,7 +333,7 @@ var testList = [
     {group: "cookies",            uri: "cookies/45/issue45.js",                   desc: "When I copy and paste or edit a cookie contents + (plus) signs get converted to spaces.", testPage: "cookies/45/issue45.php" },
     {group: "cookies",            uri: "cookies/54/issue54.js",                   desc: "urlencoding of cookies value", testPage: "cookies/54/issue54.php" },
     {group: "cookies",            uri: "cookies/60/issue60.js",                   desc: "'[' and ']' characters get badly encoded on cookie name upon editing", testPage: "cookies/60/issue60.php" },
-    {group: "cookies",            uri: "cookies/5560/issue5560.js",               desc: "Add column for raw value", testPage: "cookies/5560/issue5560.php" }
+    {group: "cookies",            uri: "cookies/5560/issue5560.js",               desc: "Add column for raw value", testPage: "cookies/5560/issue5560.php" },
     {group: "cookies",            uri: "cookies/5834/issue5834.js",               desc: "Add infotip for cookie size", testpage: "cookies/5834/issue5834.php" }
 ];
 </script>
